--- a/digame_db.html
+++ b/digame_db.html
@@ -336,6 +336,7 @@
 <table><thead><tr class="header"><th align="left">Column</th><th align="left">Data type</th><th align="left">Attribute</th><th align="left">Default</th><th align="left">Description</th></tr></thead><tbody>
 
 <tr><td><code>id</code></td><td>BIGINT</td><td>PRIMARY, AUTO INCREMENTS, NOT NULL</td><td> </td><td>流水號</td></tr>
+<tr><td><code>account_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>帳號ID</td></tr>
 <tr><td><code>player_code</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>玩家代碼<br />cq9用</td></tr>
 <tr><td><code>game_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>遊戲ID</td></tr>
 <tr><td><code>round_id</code></td><td>BIGINT</td><td>NOT NULL, UNIQUE</td><td> </td><td>局ID</td></tr>
