--- a/server/digame_db.html
+++ b/server/digame_db.html
@@ -6,6 +6,7 @@
 <li><a href="#currency"><b>currency</b></a></li>
 <li><a href="#game"><b>game</b></a></li>
 <li><a href="#game_class"><b>game_class</b></a></li>
+<li><a href="#game_stat"><b>game_stat</b></a></li>
 <li><a href="#game_type"><b>game_type</b></a></li>
 <li><a href="#log_api"><b>log_api</b></a></li>
 <li><a href="#log_error"><b>log_error</b></a></li>
@@ -87,6 +88,7 @@
 <tr><td><code>mtcode</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>交易代碼</td></tr>
 <tr><td><code>round_code</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>局號</td></tr>
 <tr><td><code>round_id</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>局ID</td></tr>
+<tr><td><code>log_bet_status</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>處理前的注單狀態<br />cq9用<br />0: 押注成功<br />1: win api失敗<br />2: win api成功<br />3: end api 成功<br />4: 已補帳</td></tr>
 <tr><td><code>status</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>注單狀態<br />0: 待sync<br />1: 處理完畢</td></tr>
 <tr><td><code>create_time</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>建立時間</td></tr>
 <tr><td><code>done_time</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>完成時間</td></tr>
@@ -141,6 +143,7 @@
 <tr><td><code>bet_unit</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>押注單位<br />slot使用<br />bet_unit x bet_multiple x line = total bet</td></tr>
 <tr><td><code>room_num</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>預開的房間數</td></tr>
 <tr><td><code>seat_num</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>預開的座位數</td></tr>
+<tr><td><code>rtp</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>預設的 rtp</td></tr>
 <tr><td><code>flag</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>旗標<br />每一個bit表示一個開關<br />0: 遊戲是否開放</td></tr>
 </tbody></table>
 
@@ -170,6 +173,28 @@
 <table><thead><tr class="header"><th align="left">Name</th><th align="left">Columns</th><th align="left">Data type</th><th align="left">Description</th></tr></thead><tbody>
 
 <tr><td>PRIMARY</td><td><code>game_class_id</code></td><td>PRIMARY</td><td> </td></tr>
+</tbody></table><a href="#d1_doc_gen_contents">To contents</a>
+
+<h2 id="game_stat"> Table: <code>game_stat</code></h2>
+
+<h3>Description:</h3>
+
+<p>遊戲統計</p>
+
+<h3>Columns:</h3>
+
+<table><thead><tr class="header"><th align="left">Column</th><th align="left">Data type</th><th align="left">Attribute</th><th align="left">Default</th><th align="left">Description</th></tr></thead><tbody>
+
+<tr><td><code>game_id</code></td><td>INT</td><td>PRIMARY, NOT NULL</td><td> </td><td>遊戲ID</td></tr>
+<tr><td><code>total_bet</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>總押注</td></tr>
+<tr><td><code>total_win</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>總贏的金額</td></tr>
+</tbody></table>
+
+<h3>Indexes:</h3>
+
+<table><thead><tr class="header"><th align="left">Name</th><th align="left">Columns</th><th align="left">Data type</th><th align="left">Description</th></tr></thead><tbody>
+
+<tr><td>PRIMARY</td><td><code>game_id</code></td><td>PRIMARY</td><td> </td></tr>
 </tbody></table><a href="#d1_doc_gen_contents">To contents</a>
 
 <h2 id="game_type"> Table: <code>game_type</code></h2>
@@ -249,21 +274,28 @@
 
 <h3>Description:</h3>
 
-<p></p>
+<p>登入資訊</p>
 
 <h3>Columns:</h3>
 
 <table><thead><tr class="header"><th align="left">Column</th><th align="left">Data type</th><th align="left">Attribute</th><th align="left">Default</th><th align="left">Description</th></tr></thead><tbody>
 
-<tr><td><code>id</code></td><td>BIGINT</td><td>PRIMARY, AUTO INCREMENTS, NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>account_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>account</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>balance</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>currency</code></td><td>VARCHAR(10)</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>game_code</code></td><td>VARCHAR(45)</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>operator_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>game_type</code></td><td>VARCHAR(45)</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>timestamp</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td> </td></tr>
+<tr><td><code>id</code></td><td>BIGINT</td><td>PRIMARY, AUTO INCREMENTS, NOT NULL</td><td> </td><td>流水號</td></tr>
+<tr><td><code>account_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>帳號ID</td></tr>
+<tr><td><code>player_code</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>玩家代碼<br />cq9用</td></tr>
+<tr><td><code>user_name</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>使用者名稱</td></tr>
+<tr><td><code>game_token</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>遊戲token</td></tr>
+<tr><td><code>game_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>遊戲ID</td></tr>
+<tr><td><code>blance</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>餘額</td></tr>
+<tr><td><code>currency_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>貨幣ID</td></tr>
+<tr><td><code>game_hall</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>遊戲廠商<br />cq9用</td></tr>
+<tr><td><code>game_platform</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>遊戲平台<br />cq9用</td></tr>
+<tr><td><code>game_tech</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>使用技術<br />cq9用</td></tr>
+<tr><td><code>game_type</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>遊戲類型<br />cq9用</td></tr>
+<tr><td><code>parent_code</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>代理ID<br />cq9用</td></tr>
+<tr><td><code>owner_code</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>上層代理ID<br />cq9用</td></tr>
+<tr><td><code>login_ip</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>登入IP</td></tr>
+<tr><td><code>create_time</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>建立時間</td></tr>
 </tbody></table>
 
 <h3>Indexes:</h3>
@@ -277,18 +309,19 @@
 
 <h3>Description:</h3>
 
-<p></p>
+<p>登出資訊</p>
 
 <h3>Columns:</h3>
 
 <table><thead><tr class="header"><th align="left">Column</th><th align="left">Data type</th><th align="left">Attribute</th><th align="left">Default</th><th align="left">Description</th></tr></thead><tbody>
 
-<tr><td><code>id</code></td><td>BIGINT</td><td>PRIMARY, AUTO INCREMENTS, NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>account_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>account</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>balance</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>currency</code></td><td>VARCHAR(45)</td><td>NOT NULL</td><td> </td><td> </td></tr>
-<tr><td><code>timestatmp</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td> </td></tr>
+<tr><td><code>id</code></td><td>BIGINT</td><td>PRIMARY, AUTO INCREMENTS, NOT NULL</td><td> </td><td>流水號</td></tr>
+<tr><td><code>account_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>帳號ID</td></tr>
+<tr><td><code>player_code</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>玩家代碼<br />cq9用</td></tr>
+<tr><td><code>game_token</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>遊戲token</td></tr>
+<tr><td><code>game_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>遊戲ID</td></tr>
+<tr><td><code>blance</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>餘額</td></tr>
+<tr><td><code>create_time</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>建立時間</td></tr>
 </tbody></table>
 
 <h3>Indexes:</h3>
@@ -311,6 +344,7 @@
 <tr><td><code>id</code></td><td>BIGINT</td><td>PRIMARY, AUTO INCREMENTS, NOT NULL</td><td> </td><td>單號</td></tr>
 <tr><td><code>account_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>帳號ID</td></tr>
 <tr><td><code>operator_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>營運商ID</td></tr>
+<tr><td><code>order_id</code></td><td>VARCHAR(50)</td><td>NOT NULL</td><td> </td><td> </td></tr>
 <tr><td><code>amount</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>金額<br />正數: 轉入錢包<br />負數: 轉出錢包</td></tr>
 <tr><td><code>balance</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>操作完後的餘額</td></tr>
 <tr><td><code>order_status</code></td><td>TINYINT</td><td>NOT NULL</td><td> </td><td>交易狀態<br />0: 成功<br />1: 餘額不足</td></tr>
@@ -337,6 +371,7 @@
 <tr><td><code>id</code></td><td>BIGINT</td><td>PRIMARY, AUTO INCREMENTS, NOT NULL</td><td> </td><td>流水號</td></tr>
 <tr><td><code>account_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>帳號ID</td></tr>
 <tr><td><code>player_code</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>玩家代碼<br />cq9用</td></tr>
+<tr><td><code>game_token</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>遊戲token</td></tr>
 <tr><td><code>game_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>遊戲ID</td></tr>
 <tr><td><code>round_id</code></td><td>BIGINT</td><td>NOT NULL, UNIQUE</td><td> </td><td>局ID</td></tr>
 <tr><td><code>bet</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>押注</td></tr>
@@ -372,7 +407,7 @@
 <tr><td><code>account_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>帳號ID</td></tr>
 <tr><td><code>player_code</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>玩家代碼<br />cq9用</td></tr>
 <tr><td><code>game_id</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>遊戲ID</td></tr>
-<tr><td><code>round_id</code></td><td>BIGINT</td><td>NOT NULL, UNIQUE</td><td> </td><td>局ID</td></tr>
+<tr><td><code>round_id</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>局ID</td></tr>
 <tr><td><code>game_mode</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>遊戲模式<br />0: base game<br />1: bonus game<br />2: lucky draw<br />3: free game</td></tr>
 <tr><td><code>spin_serial</code></td><td>INT</td><td>NOT NULL</td><td> </td><td>此局一輪中bonus game play、lucky draw play、free game spin的流水號</td></tr>
 <tr><td><code>win</code></td><td>BIGINT</td><td>NOT NULL</td><td> </td><td>贏的金額</td></tr>
@@ -385,7 +420,6 @@
 <table><thead><tr class="header"><th align="left">Name</th><th align="left">Columns</th><th align="left">Data type</th><th align="left">Description</th></tr></thead><tbody>
 
 <tr><td>PRIMARY</td><td><code>id</code></td><td>PRIMARY</td><td> </td></tr>
-<tr><td>round_id_UNIQUE</td><td><code>round_id</code></td><td>UNIQUE</td><td> </td></tr>
 </tbody></table><a href="#d1_doc_gen_contents">To contents</a>
 
 <h2 id="operator"> Table: <code>operator</code></h2>
@@ -423,7 +457,7 @@
 
 <table><thead><tr class="header"><th align="left">Column</th><th align="left">Data type</th><th align="left">Attribute</th><th align="left">Default</th><th align="left">Description</th></tr></thead><tbody>
 
-<tr><td><code>skey</code></td><td>VARCHAR(45)</td><td>PRIMARY, NOT NULL</td><td> </td><td>key<br />last_bet_sync_time: 上次注單與cq9同步的時間<br />slot_round_id: slot的round id, 當作除注單round id外的另一個備援資料<br />money_fraction_multiple: 錢小數轉整數時要乘的倍數; 以整數型態保存, 轉為小數需除以此欄位</td></tr>
+<tr><td><code>skey</code></td><td>VARCHAR(45)</td><td>PRIMARY, NOT NULL</td><td> </td><td>key<br />last_bet_sync_time: 上次注單與cq9同步的時間<br />slot_round_id: slot的round id, 當作除注單round id外的另一個備援資料<br />money_fraction_multiple: 錢小數轉整數時要乘的倍數; 以整數型態保存, 轉為小數需除以此欄位<br />round_code_prefix: 局號 prefix<br />cq9_env: cq9 環境<br />cq9_auth_header_key: cq9 api auth header key<br />cq9_auth_header_value: cq9 api auth header value<br />cq9_site_url: cq9 API base url<br />cq9_max_win: cq9單一spin允許的最大贏取金額</td></tr>
 <tr><td><code>svalue</code></td><td>VARCHAR(255)</td><td>NOT NULL</td><td> </td><td>value</td></tr>
 </tbody></table>
 
